# shamela_to_kindle

./: .cache_book_158.html  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.ar.md  README.en.md  README.md  ROADMAP.md  TECHNICAL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: APPLE_BOOKS.en.md  APPLE_BOOKS.ru.md  DEVELOPMENT.en.md  DEVELOPMENT.ru.md  ENDNOTES.en.md  ENDNOTES.ru.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.ru.md  USAGE.en.md  USAGE.ru.md
output/: الجواب الكافي لمن سأل عن الدواء الشافي أو الداء والدواء - دار المعرفة - المغرب.epub
scripts/: __init__.py  dev_setup.sh  shamela_to_epub.py
src/shamela_books/: __init__.py  __main__.py  api.py  builder.py  cache.py  cli.py  cover.py  endnotes.py  exceptions.py  http.py  models.py  parsers.py  providers.py  sanitizer.py  utils.py
tests/: test_clean.py  test_cover_opts.py  test_endnotes.py  test_meta.py  test_rate.py  test_toc.py
tests/fixtures/: book_index.html  chapter.html  chapter_endnotes.html
