[project]
name = "shamela-to-kindle"
version = "0.1.0"
description = "Convert books from shamela.ws to Kindle-friendly EPUB (RTL)"
authors = [{ name = "Shamela Tools" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "black>=24.0",
]
cover = [
  "pillow>=10.0",
]

[project.scripts]
shamela-to-epub = "scripts.shamela_to_epub:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []

